# applangue

./: README.md  backend.postman_collection.json  docker-compose.yml  pyproject.toml
backend/: settings.py  urls.py  wsgi.py
teachers/: forms.py  models.py  serializers.py  urls.py  views.py  viewsets.py
teachers/migrations/: 0001_initial.py  0002_rename_phone_teacher_phone_number_and_more.py  0003_alter_teacher_id.py  0004_alter_teacher_language.py  0005_alter_language_options_alter_language_table.py  0006_alter_teacher_language.py  0007_alter_language_id.py  0008_alter_language_name.py  0009_alter_teacher_language.py
teachers/templates/: add_teacher.html  base.html  etudiants.html  home.html  langues.html  login.html  new_etudiant.html  new_langue.html  new_teacher.html  new_user.html  teacher_details.html  teacher_list.html  teachers.html  update_etudiant.html  update_langue.html  update_teacher.html
users/: models.py  permissions.py  serializers.py  urls.py  viewsets.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_table.py  0003_remove_user_date_joined_remove_user_email_and_more.py  0004_user_is_active_user_is_staff.py  0005_user_is_superuser.py  0006_alter_user_name.py  0007_alter_user_name.py
users_app/: models.py  permissions.py  serializers.py  urls.py  views.py
users_app/migrations/: 0001_initial.py  0002_remove_user_is_active_remove_user_is_staff_and_more.py
